cabal-version:       2.4
name:                pilot
version:             0.1.0.0
synopsis:            EDSL for generating realtime C in a stream-programming style
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Alexander Vieth
maintainer:          aovieth@gmail.com
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     
                       Pilot.EDSL.Point
                       Pilot.C

                       Pilot.Types.Nat

  build-depends:       base,
                       containers,
                       language-c99,
                       language-c99-simple,
                       pretty,
                       transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -fwarn-incomplete-patterns
                       -fwarn-unused-imports
