cabal-version:       2.4
name:                pilot
version:             0.1.0.0
synopsis:            EDSL for generating realtime C in a stream-programming style
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Alexander Vieth
maintainer:          aovieth@gmail.com
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Pilot.EDSL.Expr
                       Pilot.EDSL.Lifted
                       Pilot.EDSL.Point
                       Pilot.EDSL.Stream

                       Pilot.EDSL.Expr.Bind

                       Pilot.Interp.Exec
                       Pilot.Interp.Pure

                       Pilot.Interp.C
                       Pilot.Interp.C.AST
                       Pilot.Interp.C.CodeGen
                       Pilot.Interp.C.Eval
                       Pilot.Interp.C.Iface
                       Pilot.Interp.C.IO
                       Pilot.Interp.C.Util

                       Pilot.Language.Types

                       Pilot.Types.Fun
                       Pilot.Types.Logic
                       Pilot.Types.Nat
                       Pilot.Types.Represented
                       Pilot.Types.Stream

                       Examples

  build-depends:       base,
                       containers,
                       language-c99,
                       language-c99-simple,
                       pretty,
                       transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -fwarn-incomplete-patterns
                       -fwarn-unused-imports
