cabal-version:       2.4
name:                pilot
version:             0.1.0.0
synopsis:            EDSL for generating realtime C in a stream-programming style
-- description:
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              Alexander Vieth
maintainer:          aovieth@gmail.com
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Language.Pilot
                       Language.Pilot.Meta
                       Language.Pilot.Object
                       Language.Pilot.Object.Point
                       Language.Pilot.Repr

                       Language.Pilot.Types
                       Language.Pilot.Types.Logic
                       Language.Pilot.Types.Nat
                       Language.Pilot.Types.Represented

                       Language.Pilot.Interp.Pure
                       Language.Pilot.Interp.Pure.PrefixList
                       Language.Pilot.Interp.Pure.Point

                       Language.Pilot.Nominal

                       Language.Pilot.Examples
                       Language.Pilot.Examples.Heater

  build-depends:       base
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -fwarn-incomplete-patterns
                       -fwarn-unused-imports
